# grawiki

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml  todos_and_questions.md
.github/workflows/: package-check.yml  publish.yml  ruff.yml
.kilo/plans/: 1777122290764-curious-comet.md  1777123035421-mighty-garden.md  1777127851213-tidy-orchid.md
agent_tools/: CODEMAP.md  extraction_speedup_plan.md  presentation.qmd  similar_entities_usage_scenarios.md
docs/: CODEMAP.md  concepts.md  extraction_speedup_plan.md  flows.md  index.md  public_mirror_strategy.md  references.bib  references.md  similar_entities_usage_scenarios.md  structure.md
docs/api/: graphrag.md  index.md
docs/api/db/: base.md  falkordb.md
docs/api/graph/: extraction.md  models.md
docs/api/retrieval/: index.md  keywords.md  text.md
docs/api/similarity/: deduplication.md  finder.md  index.md  matchers.md  models.md
docs/how-to/: deduplicate-entities.md  index.md  ingest-a-document.md  store-and-recall-memory.md  tips-and-tricks.md  visualize-a-graph.md
notebooks/: 01_ingest_and_deduplicate.ipynb  02_agent_memory_and_recall.ipynb  03_visualize_graph.ipynb  README.md  debug.py  docker-compose.yml  example_notebook.ipynb  extraction_db_debug.py  falkordb_debug.py
notebooks/experimental_data/: agent_architectures.txt  deep_knowledge_from_deep_learning.txt  networked_narratives.txt  react_agents.txt  reflection_agents.txt  structured_knowledge_extraction.txt  summary_of_architecutres.txt
private/: sync_instructions.md
private/agents/: CODEMAP.md
private/agents/context_and_texts/: article_text.qmd
private/agents/plans/: IMPLEMENTATION_PLAN.md  public_mirror_strategy.md
private/public/: forbidden_references.txt  include_paths.txt  sync_public.sh
src/grawiki/: __init__.py
src/grawiki/core/: commons.py  embedding.py  pipeline.py
src/grawiki/db/: __init__.py  base.py  cypher.py  cypher_queries.py  falkordb.py
src/grawiki/doc_processing/: chunk_processors.py  chunkers.py  document_processing.py
src/grawiki/graph/: __init__.py  extraction.py  graph_extraction.py  graph_prompts.py  models.py  prompts.py
src/grawiki/rag/: __init__.py  graph_rag.py
src/grawiki/retrieval/: __init__.py  base.py  keywords.py  retriever.py  text.py
src/grawiki/similarity/: __init__.py  base.py  deduplication.py  fuzzy.py  models.py  similarity_finder.py  vector.py
tests/: conftest.py
tests/core/: test_pipeline.py
tests/db/: test_cypher.py  test_cypher_queries.py  test_falkordb.py  test_package_surface.py
tests/doc_processing/: test_chunk_processors.py
tests/graph/: test_extraction.py  test_graph_extraction.py  test_models.py  test_prompts.py
tests/rag/: test_graph_rag.py
tests/retrieval/: test_keywords_retriever.py  test_retriever.py
tests/similarity/: test_deduplication.py  test_finder.py
