[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "grawiki"
version = "0.1.0"
description = "Graph-backed knowledge extraction and agent memory for LLM systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie>=1.6.2",
    "joblib>=1.5.3",
    "pandas>=3.0.2",
    "pydantic-ai-slim[openai,openrouter]>=1.84.1",
    "rapidfuzz>=3.14.5",
    "unstructured>=0.22.21",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-copy-to-llm>=0.2.0",
    "mkdocs-material>=9.6.20",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.15",
]

[tool.ruff]
target-version = "py313"

[dependency-groups]
dev = [
    "autoroot>=1.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
falkordb = [
    "falkordblite>=0.9.0",
]
research = [
    "autoroot>=1.0.1",
    "autorootcwd>=1.0.1",
    "ipykernel>=7.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/grawiki"]
